# platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  hello.py  mkdocs.yml  pytest.ini  requirements.txt
.github/workflows/: cicd.yml  docs.yml
config/backup/: postgres.yaml
config/crd/: mlaiops.io_nexusagents.yaml  mlaiops.io_nexusworkspaces.yaml  mlaiops.io_platformresources.yaml
config/deploy/: operator.yaml  (+2 more)
deploy/: compose.public.yaml  compose.yaml
docs/: backend.md  connecting-services.md  hosting.md  index.md
examples/: quickstart.py
go/: go.mod  go.sum
python/: pyproject.toml
python/agent_runtime/: Dockerfile  README.md  __init__.py  __main__.py  app.py  graphs.py  reporting.py
python/agent_runtime/evals/: README.md  __init__.py  eval_customer_support.py  golden.jsonl
python/agents/: __init__.py
python/agents/customer_support/: __init__.py  graph.py
python/features/: __init__.py  definitions.py  materialize.py
python/mlaiops_sdk/: __init__.py  agents.py  client.py  llm.py  models.py  pipelines.py  tools.py  tracing.py
python/pipelines/: Dockerfile  __init__.py  report.py  serve.py  training.py
python/realtime/: __init__.py  demos.py  kafka.py  produce.py  service.py
python/tests/: test_agent_runtime.py  test_agents.py  test_client.py  test_client_workflows.py  test_features.py  test_llm.py  test_pipelines.py  test_primitives.py  test_realtime.py  test_tools_langchain.py  test_workspace_cli.py
scripts/: bootstrap-k8s-tools.sh  demo-smoke.sh  e2e-kind.sh  integration-test.sh  kind-up.sh  local-topics.sh
(+108 files in other folders)
