[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlaiops-sdk"
version = "0.1.0"
description = "Python client for the ml-ai-ops-platform control plane"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "pydantic>=2.7"]

[tool.hatch.build.targets.wheel]
packages = ["mlaiops_sdk"]

[tool.ruff]
line-length = 100
