[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlaiops-sdk"
version = "0.2.0"
description = "Python client for the ml-ai-ops-platform control plane"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "pydantic>=2.7"]

[project.optional-dependencies]
agents = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langfuse>=2.0",
    "psycopg[binary]>=3.1",
]
runtime = [
    "mlaiops-sdk[agents]",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["mlaiops_sdk"]

[tool.ruff]
line-length = 100
